# Copyright (c) 2020-2021 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

if(${CMAKE_CROSSCOMPILING})
    include(mbed_set_linker_script)

    foreach(_label IN LISTS MBED_TARGET_LABELS)
        if(_label MATCHES "^Ambiq_Micro$")
            add_subdirectory(TARGET_Ambiq_Micro EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^Analog_Devices$")
            add_subdirectory(TARGET_Analog_Devices EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^ARM_FM$")
            add_subdirectory(TARGET_ARM_FM EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^ARM_SSG$")
            add_subdirectory(TARGET_ARM_SSG EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^Cypress$")
            add_subdirectory(TARGET_Cypress EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^Freescale$")
            add_subdirectory(TARGET_Freescale EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^Maxim$")
            add_subdirectory(TARGET_Maxim EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^NORDIC$")
            add_subdirectory(TARGET_NORDIC EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^NUVOTON$")
            add_subdirectory(TARGET_NUVOTON EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^NXP$")
            add_subdirectory(TARGET_NXP EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^RASPBERRYPI$")
            add_subdirectory(TARGET_RASPBERRYPI EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^RENESAS$")
            add_subdirectory(TARGET_RENESAS EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^Silicon_Labs$")
            add_subdirectory(TARGET_Silicon_Labs EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^STM$")
            add_subdirectory(TARGET_STM EXCLUDE_FROM_ALL)
            break()
        elseif(_label MATCHES "^TOSHIBA$")
            add_subdirectory(TARGET_TOSHIBA EXCLUDE_FROM_ALL)
            break()
        endif()
    endforeach()
    

endif()
