[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mbed-ce-tools"
version = "0.0.1"
description = 'Tools for building and testing Mbed OS Community Edition'
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = [
    # memap dependencies ---------------------------------------------------------------------
    "intelhex>=2.3.0,<3.0.0",

    # 3.12.0 both added HRuleStyle and deprecated the old constants in one single release :/
    "prettytable>=2.0,<3.12.0; python_version < '3.9'",
    "prettytable>=3.12.0; python_version >= '3.9'",

    # mbed_tools dependencies ----------------------------------------------------------------
    "jinja2>=2.11.3",
    "python-dotenv",
    "Click>=8.0", # Need at least this version for pathlib.Path support
    "tqdm",
    "tabulate",
    "requests>=2.20",
    "typing-extensions",
    "pyserial",
    "appdirs",
    "pyjson5>=1.6",
    "humanize>=4.9.0",
    "setuptools>=64.0",

    # Needed for downloading CMSIS MCU descriptions
    "cmsis-pack-manager>=0.5.0",

    # USB device detection on Windows
    "pywin32; platform_system=='Windows'",

    # USB device detection on Linux
    "psutil; platform_system=='Linux'",
    "pyudev; platform_system=='Linux'",

    # USB device detection on Mac
    "beautifulsoup4; sys_platform == 'darwin'",
    "lxml; sys_platform == 'darwin'",

    # mbed_os_tools.test dependencies ---------------------------------------------------------
    "junit-xml>=1.0",
    "lockfile",
    "colorama",

    # mbed_os_tools.detect dependencies -------------------------------------------------------
    "fasteners",

    # needed for signing secure images --------------------------------------------------------
    "cryptography",
    "cbor"
]

[project.optional-dependencies]
unit-tests = [
    "pytest",
    "factory_boy",
    "requests-mock",
    "mock",
    "coverage",

    # Even though beautifulsoup4 and lxml are only used by the mac version
    # of mbed ls tools, they're needed on all platforms for its unit test.
    "beautifulsoup4",
    "lxml"
]
linters = [
    "ruff",
    "basedpyright",

    # To pass Pyright we need all the platform-dependent packages
    "platformio",
    "SCons",
    "psutil",
    "pyudev",
    "beautifulsoup4",
    "lxml"
]
greentea = [
    ## Additional requirements to install into the Mbed environment when running Greentea tests
    # For USB Device host tests
    "hidapi>=0.7.99",
    "pyusb>=1.2.0",
    "wmi>=1.5; platform_system == 'Windows'",
]

# Install this optional dependency group to get IDE completion for packages used by the mbed_platformio package.
# Note that this package is actually run in platformio's venv, not the Mbed venv, so there is no other need to install these.
platformio = [
    "SCons",
    "platformio"
]

[tool.hatch.build.targets.wheel]
packages = [
    "python/mbed_host_tests",
    "python/mbed_lstools",
    "python/mbed_os_tools",
    "python/mbed_tools",
    "python/memap",
    "python/scancode_evaluate",
    "python/ambiq_svl"
]

[project.scripts]
mbedhtrun = "mbed_host_tests.mbedhtrun:main"
mbedls = "mbed_lstools.main:mbedls_main"
mbed-tools = "mbed_tools.cli.main:cli"
memap = "memap.memap:main"
ambiq_svl = "ambiq_svl.svl:cli"

[tool.ruff]
line-length = 120
src = ['python']

[tool.ruff.lint]
select = [
    'A',    # Builtins
    'ANN',  # Annotations
    'ARG',  # Unused arguments
    'B',    # Bugbear
    'BLE',  # Blind except
    'C4',   # Comprehensions
    'C90',  # mccabe
    'COM',  # Commas
    'D2',   # Docstring conventions
    'DTZ',  # Datetimes
    'EM',   # Error messages
    'ERA',  # Commented-out code
    'EXE',  # Executable
    'F',    # Pyflakes
    'FA',   # __future__ annotations
    'FLY',  # F-strings
    'FURB', # Refurb
    'G',    # Logging format
    'I',    # Isort
    'ICN',  # Import conventions
    'INP',  # Disallow PEP-420 (Implicit namespace packages)
    'INT',  # gettext
    'ISC',  # Implicit str concat
    'LOG',  # Logging
    'N',    # PEP-8 Naming
    'NPY',  # Numpy
    'PERF', # Unnecessary performance costs
    'PGH',  # Pygrep hooks
    'PIE',  # Unnecessary code
    'PL',   # Pylint
    'PT',   # Pytest
    'PTH',  # Use Pathlib
    'PYI',  # Stub files
    'Q',    # Quotes
    'RET',  # Return
    'RUF',  # Ruff
    'RSE',  # Raise
    'S',    # Bandit
    'SIM',  # Code simplification
    'SLF',  # Private member access
    'SLOT', # __slots__
    'T10',  # Debugger
    'T20',  # Print
    'TCH',  # Type checking
    'TID',  # Tidy imports
    'TRY',  # Exception handling
    'UP',   # Pyupgrade
    'W',    # Warnings
    'YTT',  # sys.version
]
ignore = [
    'D203',    # One blank line before class docstring
    'D212',    # Multi-line summary first line
    'Q000',    # Single quotes found but double quotes preferred
    'D200',    # One-line docstring should fit on one line
    'S101',    # Assert statements
    'RET505',  # Unnecessary `elif` after `return` statement
    'RET506',  # Unnecessary `else` after `raise` statement
    'TRY003',  # Inline exception messages - Redundant with EM101
    'COM812',  # Missing trailing commas - incompatible with formatter
    'ISC001',  # Single line implicit string concatenation - incompatible with formatter
    'TRY300',  # Returns within try blocks
    'PLR2004', # Magic value used in comparison
    'SIM102',  # Allow multiple nested if statements.  Sometimes it's nice for readability
    'TC001', 'TC003', # Don't require TYPE_CHECKING checks in imports. Waaaay too annoying to manage.
    'PERF203', # Allow try-except within loops. Sometimes this is needed!
    'PERF401', # Allow for loops that could be comprehensions. Sometimes this makes code easier to understand.
    'PLR5501', # Stop collapsing my if statements!
    'TC006',   # Allow unquoted types passed to typing.cast()
    'G004',    # Allow f-strings in logging calls
    'ANN401',  # Allow typing things as Any
    'DTZ005',  # Allow creating datetime.datetime without passing a timezone. If this lint is enabled, it seems difficult to actually work with datetime objects that should be in the local time zone.
    'S701',    # Allow using jinja without autoescape. autoescape not needed because we are not rendering HTML
    'BLE001',  # Allow catching Exception
    'S603',    # Allow running subprocesses with variable arguments (why is this a lint in the first place??)
    'ERA001',  # Allow commented code
    'T201',    # Allow print()

    # For now allow old-style type annotations. Currently there's lots of code that uses them, and I am
    # not sure if there is a way to upgrade them automatically. And since this project still supports
    # back to Python 3.7, you can't actually use the new style of annotations without using the future annotations feature.
    "FA100",
    "UP045",
    "UP006"
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.flake8-annotations]
# Don't require a return type annotation for __init__ in most cases
mypy-init-return = true

[tool.basedpyright]

# Don't warn about things deprecated more recently than python 3.7
pythonVersion = "3.7"

include = [
    "python/mbed_tools/**",
    "python/mbed_platformio/**"
]

# For right now, we can configure basedpyright in relatively permissive mode.
# We will allow code where the types of things are partially unknown, as there is
# lots of legacy code in that category.
# Also the PlatformIO code has to work with SCons, which is fundamentally type
# annotation proof, so it can likely never pass these checks.
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportMissingTypeArgument = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false

# Use "medium strict" member variable annotation rules, where the type checker
# is allowed to infer the types of class variables based on what gets assigned in __init__
reportIncompatibleUnannotatedOverride = true
reportUnannotatedClassAttribute = false

# Conflicts with Ruff rules
reportImplicitStringConcatenation = false

# Allow isinstance() even when it seems unneccessary based on type annotations.
# This call is useful to check that the runtime types match the annotations.
reportUnnecessaryIsInstance = false